--- a/public/html/authForm.html
+++ b/public/html/authForm.html
@@ -19,6 +19,21 @@
           <input type="password" class="form-control" required ng-model='user.password2'>
         </div>
 
+        <div class="form-group">
+          <label>image</label>
+          <input type="text" class="form-control" required ng-model='user.image'>
+        </div>
+
+        <div class="form-group">
+          <label>biography</label>
+          <input type="text" class="form-control" required ng-model='user.biography'>
+        </div>
+
+        <div class="form-group">
+          <label>etc</label>
+          <input type="text" class="form-control" required ng-model='user.etc'>
+        </div>
+
         <button class="btn btn-primary">{{currentState | titlecase }}</button>
         <!-- <button class="btn btn-primary">{{currentState}}</button> -->
 
