--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -1,8 +1,59 @@
-<div class='row'>
+<!-- <div class='row'>
   <pre>
     Image: <img ng-src="http://{{currentUser.image}}" class="img-rounded" />
-    User Name: {{currentUser.name}}
+    User Name: {{currentUser.username}}
     Biography:  {{currentUser.biography}}
     Etc: {{currentUser.etc}}
   </pre>
+</div> -->
+
+
+<div class="ui cards">
+  <div class="card">
+    <div class="content">
+      <img class="right floated ui image" ng-src="http://{{currentUser.image}}">
+      <div class="header">
+        User Name: {{currentUser.name}}
+      </div>
+      <div class="meta">
+        Biography:  {{currentUser.biography}}
+      </div>
+      <div class="description">
+        Etc: {{currentUser.etc}}
+      </div>
+    </div>
+    <div class="extra content">
+      <div class="ui two buttons">
+        <div class="ui basic green button">Approve</div>
+        <div class="ui basic red button">Decline</div>
+      </div>
+    </div>
+  </div>
 </div>
+
+<!-- 
+<div class="ui link cards">
+  <div class="card">
+    <div class="image">
+      <img ng-src="http://{{currentUser.image}}">
+    </div>
+    <div class="content">
+      <div class="header">{{currentUser.name}}</div>
+      <div class="meta">
+        <a>Friends</a>
+      </div>
+      <div class="description">
+        {{currentUser.etc}}
+      </div>
+    </div>
+    <div class="extra content">
+      <span class="right floated">
+        {{currentUser.biography}}
+      </span>
+      <span>
+        <i class="user icon"></i>
+        75 Friends
+      </span>
+    </div>
+  </div>
+</div> -->
